# ray-tracer

./: CMakeLists.txt
src/: canvas.cpp  canvas.h  main.cpp  matrices.cpp  matrices.h  tools.cpp  tools.h  transformations.cpp  transformations.h  tuples.cpp  tuples.h
tests/: tests.cpp  tuples.cpp
